# write_your_name_with_robot

./: README.md
mycobot_ros2/mycobot_bringup/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_bringup/launch/: mycobot_280_gazebo.launch.py
mycobot_ros2/mycobot_bringup/scripts/: mycobot_280_gazebo.sh  mycobot_280_gazebo_and_moveit.sh
mycobot_ros2/mycobot_description/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_description/rviz/: mycobot_280_description.rviz
mycobot_ros2/mycobot_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  mycobot_280_ros2_control.urdf.xacro
mycobot_ros2/mycobot_gazebo/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_gazebo/launch/: mycobot.gazebo.launch.py
mycobot_ros2/mycobot_gazebo/worlds/: empty.world  pick_and_place_demo.world
mycobot_ros2/mycobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_ros2/mycobot_moveit_config/config/: ompl_planning.yaml
mycobot_ros2/mycobot_moveit_config/config/mycobot_280/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  mycobot_280.srdf  ros2_controllers.yaml  ros2_controllers_template.yaml
mycobot_ros2/mycobot_ros2/: package.xml
mycobot_ros2/mycobot_system_tests/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_system_tests/scripts/: arm_gripper_loop_controller.py  draw_my_name.py  my_name_cart.py
